mdmCeneveo/src/objects/M_A__c.object
<CustomObject>
    <fields>
        <fullName>CVO_Connections__c</fullName>
        <label>CVO Connections</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Capabilities__c</fullName>
        <label>Capabilities</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Owner__c</fullName>
        <label>Company Owner</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Digital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label>Employees</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Envelopes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Envelopes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Est_Multiple__c</fullName>
        <description>Estimated multiple the transaction would occur at</description>
        <inlineHelpText>Estimated multiple the transaction would occur at</inlineHelpText>
        <label>Est Multiple</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;4x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4x-6x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7x-8x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;8x</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flexible_Pkg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flexible Pkg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flexo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flexo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Folding_Cartons__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Folding Cartons</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial/Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT/Telecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharma/Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel/Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MA_Calculation_WF__c</fullName>
        <label>MA Calculation WF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MA_Score__c</fullName>
        <formula>(If( Revenue__c &lt;5,12,
  If(
     and(
          Revenue__c&gt;=5,
          Revenue__c&lt;25
         ),30,
  If(
      and(
          Revenue__c&gt;=25,
          Revenue__c&lt;100
         ),15,
  If(
      Revenue__c&gt;=100,5,
  If(
      ISBLANK(Revenue__c),0,0
    ))))))  +

(If(ISPICKVAL(Willingness_to_Sell__c, &quot;Actively Selling&quot;), 7,
    If(ISPICKVAL(Willingness_to_Sell__c, &quot;Interested in Selling&quot;), 5,
       If(ISPICKVAL(Willingness_to_Sell__c, &quot;Not Selling Now&quot;), 3,
          If(ISPICKVAL(Willingness_to_Sell__c, &quot;No Potential&quot;), 0,
            If(ISBLANK(TEXT(Willingness_to_Sell__c)), 0, 0))))))

+ 
If(Sleeves__c,10,0) +
If(Prime_Labels__c,10,0) +
If(Envelopes__c,0,0) +
If(Commercial_Print__c,0,0) +
If(eCommerce__c,5,0) +
If(Folding_Cartons__c,5,0) +
If(Nashua_Labels__c,2,0) +
If(Nashua_POS__c,0,0) +
If(Flexible_Pkg__c,10,0)

+

(If(ISPICKVAL(Ownership__c, &quot;Private Equity&quot;),1,
If(ISPICKVAL(Ownership__c, &quot;Public&quot;),3,
If(ISPICKVAL( Ownership__c, &quot;Family Owned&quot;),10,
If(ISPICKVAL( Ownership__c, &quot;Partner Owned&quot;),5,
If(ISBLANK(TEXT(Ownership__c)),0,0))))))

+

(If(ISPICKVAL( M_A_Source__c , &quot;Banker&quot;),2,
If(ISPICKVAL(M_A_Source__c, &quot;Research&quot;),11,
If(ISPICKVAL(M_A_Source__c, &quot;Industry List&quot;),5,
If(ISPICKVAL(M_A_Source__c, &quot;Employee Referral&quot;),11,
If(ISBLANK(TEXT(M_A_Source__c)),0,0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MA Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_A_Source__c</fullName>
        <label>M&amp;A Source</label>
        <picklist>
            <picklistValues>
                <fullName>Industry List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nashua_Labels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nashua Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nashua_POS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nashua POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notable_Customers__c</fullName>
        <label>Notable Customers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <picklist>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_1__c</fullName>
        <label>Plant 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_2__c</fullName>
        <label>Plant 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_3__c</fullName>
        <label>Plant 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prime_Labels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prime Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Not interested in selling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrealistic multiple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No product fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed Diligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undesirable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rotary_Combo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rotary Combo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Screen_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Screen Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment_OLD__c</fullName>
        <label>Segment OLD</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <formula>If(  MA_Calculation_WF__c  &gt;80,&quot;A&quot;,
If(and(MA_Calculation_WF__c&gt;=60,Revenue__c&lt;80),&quot;B&quot;,
If(and(MA_Calculation_WF__c&gt;=40,Revenue__c&lt;60),&quot;C&quot;,
If(MA_Calculation_WF__c&lt;40,&quot;D&quot;, &quot;F&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sleeves__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sleeves</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Untouched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Segmented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TB Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Due Diligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOI Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal/PSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_1__c</fullName>
        <label>Street Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_2__c</fullName>
        <label>Street Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub Industry</label>
        <picklist>
            <controllingField>Industry__c</controllingField>
            <picklistValues>
                <fullName>3PL/Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcoholic Beverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel/Textiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Packers/Decorators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department Store/Big Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diversified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy/Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment Venue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelopes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food/Baking/Confectionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphics Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household/OTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR and Staffing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal/Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Willingness_to_Sell__c</fullName>
        <label>Willingness to Sell</label>
        <picklist>
            <picklistValues>
                <fullName>Actively Selling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested in Selling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not selling now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Potential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCommerce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eCommerce</label>
        <type>Checkbox</type>
    </fields>
    <label>M&amp;A</label>
    <listViews>
        <fullName>All_Open</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Revenue__c</columns>
        <columns>MA_Calculation_WF__c</columns>
        <columns>Employees__c</columns>
        <columns>Est_Multiple__c</columns>
        <columns>Prime_Labels__c</columns>
        <columns>Flexible_Pkg__c</columns>
        <columns>Folding_Cartons__c</columns>
        <columns>Sleeves__c</columns>
        <columns>M_A_Source__c</columns>
        <columns>Name__c</columns>
        <columns>State__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </filters>
        <label>All Open</label>
    </listViews>
    <listViews>
        <fullName>Product_Checkboxes</fullName>
        <columns>NAME</columns>
        <columns>eCommerce__c</columns>
        <columns>Flexible_Pkg__c</columns>
        <columns>Folding_Cartons__c</columns>
        <columns>Envelopes__c</columns>
        <columns>Nashua_Labels__c</columns>
        <columns>Nashua_POS__c</columns>
        <columns>Sleeves__c</columns>
        <columns>Commercial_Print__c</columns>
        <columns>Prime_Labels__c</columns>
        <filterScope>Everything</filterScope>
        <label>Product Checkboxes</label>
    </listViews>
    <listViews>
        <fullName>TB_Contacted</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Revenue__c</columns>
        <columns>Employees__c</columns>
        <columns>Ownership__c</columns>
        <columns>Company_Owner__c</columns>
        <columns>Segment_OLD__c</columns>
        <columns>Est_Multiple__c</columns>
        <columns>Prime_Labels__c</columns>
        <columns>Sleeves__c</columns>
        <columns>Flexible_Pkg__c</columns>
        <columns>Folding_Cartons__c</columns>
        <columns>M_A_Source__c</columns>
        <columns>Name__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>TB Contacted</value>
        </filters>
        <label>TB Contacted</label>
    </listViews>
    <listViews>
        <fullName>VIP_Targets</fullName>
        <columns>NAME</columns>
        <columns>Revenue__c</columns>
        <columns>Stage__c</columns>
        <columns>Ownership__c</columns>
        <columns>Plant_1__c</columns>
        <columns>Est_Multiple__c</columns>
        <columns>Willingness_to_Sell__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Nashua_Labels__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>VIP Targets</label>
    </listViews>
    <nameField>
        <label>M&amp;A Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>M&amp;A</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>